Fix submission guidelines header and list alignment

--- a/art-to-heart-styles.css
+++ b/art-to-heart-styles.css
@@ -126,12 +126,12 @@ h3 {
 
 /* use flex-section style naming convention to simplify this */
 /* apply-section-content-container */
-.apply-step-one-container p, .apply-step-two-container p, .apply-step-three-container p, .apply-step-four-container p {
+.apply-step-one-container p, .apply-step-two-container p, .apply-step-three-container p, .apply-step-four-container p, h4 {
     width: 45%;
     text-align: left;
 }
 
-.apply-step-four-container ol {
+.apply-step-four-container h4, ol {
     width: 45%;
     text-align: left;
 }
